--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT = 5000
-MONGO_DB_URL = "mongodb+srv://jashnavadiya8:Asdf1234@cluster0.zebzdmi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_DB_URL = "mongodb://localhost:27017/"
+# MONGO_DB_URL ="mongodb+srv://jashnavadiya8:Asdf1234@cluster0.zebzdmi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
